--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub API App</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 
-    <h1>TODO - complete this page</h1>
+    <h1>Discover more about a GitHub user</h1>
+
+    <h2>Enter your GitHub user's name</h2>
     
-</body>
-</html>
+    <form method="GET" action="get_user"><!--so how will this gel with project 3? all 3 api withGETS on 1 method/input or something?-->
+        <label>Github Username: </label>
+        <input name="username"><!--becomes part of the url request-->
+        <button type="Submit">Go!</button><!--submits data to server/makes requests to server-->
+    </form><!--get request."" is standard html convention-->
+
+{% endblock %}
